--- a/app/src/main/res/layout/activity_firma.xml
+++ b/app/src/main/res/layout/activity_firma.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2196F3"
-    tools:context=".Views.ActivityCreateFoto">
+    tools:context=".Views.ActivityFirma">
 
-    <ImageView
-        android:id="@+id/image_view"
+    <View
+        android:id="@+id/firma"
         android:layout_width="300dp"
-        android:layout_height="350dp"
+        android:layout_height="200dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@android:color/white"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:ignore="MissingClass" />
 
     <TextView
         android:id="@+id/textView2"
@@ -30,7 +30,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_view" />
+        app:layout_constraintTop_toBottomOf="@+id/firma" />
 
     <EditText
         android:id="@+id/editTextdes"
@@ -50,7 +50,7 @@
         android:id="@+id/btnfirma"
         android:layout_width="150dp"
         android:layout_height="48dp"
-        android:text="Tomar Foto"
+        android:text="Tomar Firma"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextdes" />
@@ -74,7 +74,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="Ver Fotografias"
+        android:text="Ver Lista"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnguardar" />
